--- a/Views/CustomerListView.xaml
+++ b/Views/CustomerListView.xaml
@@ -1,11 +1,12 @@
-﻿<Window x:Class="CustomerDatabase.MainWindow"
+﻿<Window x:Class="CustomerDatabase.Views.CustomerListView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CustomerDatabase"
+        xmlns:local="clr-namespace:CustomerDatabase.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        d:DataContext="{d:DesignInstance local:CustomerListView}" d:DesignHeight="250" d:DesignWidth="400"
+        Title="Customer List" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         
     </Grid>
