--- a/Views/CustomerListView.xaml
+++ b/Views/CustomerListView.xaml
@@ -4,10 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerDatabase.Views"
+        xmlns:vm="clr-namespace:CustomerDatabase.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:CustomerListView}" d:DesignHeight="250" d:DesignWidth="400"
+        d:DataContext="{d:DesignInstance vm:CustomerListViewModel}" d:DesignHeight="250" d:DesignWidth="400"
         Title="Customer List" Height="450" Width="800" WindowStartupLocation="CenterScreen">
-    <Grid>
-        
-    </Grid>
+  <Grid>
+    <TextBox Text="{Binding Test, UpdateSourceTrigger=PropertyChanged}"/>
+  </Grid>
 </Window>
