--- a/Views/CustomerListView.xaml
+++ b/Views/CustomerListView.xaml
@@ -7,8 +7,37 @@
         xmlns:vm="clr-namespace:CustomerDatabase.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:CustomerListViewModel}" d:DesignHeight="250" d:DesignWidth="400"
-        Title="Customer List" Height="450" Width="800" WindowStartupLocation="CenterScreen">
+        Title="Customer List" Height="500" Width="800" WindowStartupLocation="CenterScreen">
   <Grid>
-    <TextBox Text="{Binding Test, UpdateSourceTrigger=PropertyChanged}"/>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="10"/>
+      <RowDefinition Height="*"/>
+      <RowDefinition Height="10"/>
+      <RowDefinition Height="9*"/>
+      <RowDefinition Height="10"/>
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="10"/>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="10"/>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="10"/>
+      <ColumnDefinition Width="2*"/>
+      <ColumnDefinition Width="10"/>
+    </Grid.ColumnDefinitions>
+    <DataGrid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5"
+              Margin="10" IsReadOnly="True" AutoGenerateColumns="False"
+              CanUserAddRows="False" ItemsSource="{Binding Customers.DefaultView}"
+              SelectedItem="{Binding SelectedCustomer, ValidatesOnExceptions=True}">
+      <DataGrid.Columns>
+        <DataGridTextColumn Header="ID" Binding="{Binding Id}" Width="*"/>
+        <DataGridTextColumn Header="Passport ID" Binding="{Binding PassportId}" Width="3*"/>
+        <DataGridTextColumn Header="First name" Binding="{Binding FirstName}" Width="5*"/>
+        <DataGridTextColumn Header="Last name" Binding="{Binding LastName}" Width="5*"/>
+        <DataGridTextColumn Header="Age" Binding="{Binding Age}" Width="Auto"/>
+        <DataGridTextColumn Header="Sex" Binding="{Binding Sex}" Width="2*"/>
+        <DataGridTextColumn Header="Address" Binding="{Binding Address}" Width="9*"/>
+      </DataGrid.Columns>
+    </DataGrid>
   </Grid>
 </Window>
