Theme main window

--- a/Views/CustomerListView.xaml
+++ b/Views/CustomerListView.xaml
@@ -11,21 +11,26 @@
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="10"/>
-      <RowDefinition Height="*"/>
+      <RowDefinition Height="25"/>
       <RowDefinition Height="10"/>
-      <RowDefinition Height="9*"/>
+      <RowDefinition />
       <RowDefinition Height="10"/>
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="10"/>
       <ColumnDefinition Width="*"/>
-      <ColumnDefinition Width="10"/>
+      <ColumnDefinition Width="20"/>
       <ColumnDefinition Width="*"/>
-      <ColumnDefinition Width="10"/>
+      <ColumnDefinition Width="20"/>
       <ColumnDefinition Width="2*"/>
       <ColumnDefinition Width="10"/>
     </Grid.ColumnDefinitions>
-    <DataGrid Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="5"
+    
+    <Button Content="Add" Grid.Column="1" Grid.Row="1" Command="{Binding Add}"/>
+    <Button Content="Edit" Grid.Column="3" Grid.Row="1" Command="{Binding Edit}"/>
+    <TextBox Grid.Column="5" Grid.Row="1" Padding="5 0"/>
+
+    <DataGrid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="7"
               Margin="10" IsReadOnly="True" AutoGenerateColumns="False"
               CanUserAddRows="False" ItemsSource="{Binding Customers.DefaultView}"
               SelectedItem="{Binding SelectedCustomer, ValidatesOnExceptions=True}">
