Implements DB insert and update

--- a/Views/AddCustomerView.xaml
+++ b/Views/AddCustomerView.xaml
@@ -8,60 +8,74 @@
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:AddCustomerViewModel}" d:DesignHeight="250" d:DesignWidth="300"
         Title="Add new customer" Height="260" Width="600" WindowStartupLocation="CenterScreen">
+
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="10"/>
       <ColumnDefinition Width="*"/>
       <ColumnDefinition Width="20"/>
-      <ColumnDefinition Width="2*"/>
-      <ColumnDefinition Width="20"/>
       <ColumnDefinition Width="*"/>
-      <ColumnDefinition Width="20"/>
-      <ColumnDefinition Width="2*"/>
       <ColumnDefinition Width="10"/>
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
       <RowDefinition Height="10"/>
       <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="10"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="10"/>
-      <RowDefinition Height="*"/>
-      <RowDefinition Height="*"/>
       <RowDefinition Height="20"/>
-      <RowDefinition Height="*"/>
+      <RowDefinition Height="25"/>
       <RowDefinition Height="10"/>
     </Grid.RowDefinitions>
-
-    <Label Grid.Row="1" Grid.Column="1" Content="First name:"/>
-    <TextBox Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="3"
-             Text="{Binding FirstName}"/>
     
-    <Label Grid.Row="1" Grid.Column="5" Content="Last name:"/>
-    <TextBox Grid.Row="2" Grid.Column="5" Grid.ColumnSpan="3"
-             Text="{Binding LastName}"/>
+    <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" 
+          DataContext="{Binding Customer}">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="20"/>
+        <ColumnDefinition Width="2*"/>
+        <ColumnDefinition Width="20"/>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="20"/>
+        <ColumnDefinition Width="2*"/>
+      </Grid.ColumnDefinitions>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="10"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="10"/>
+        <RowDefinition Height="*"/>
+        <RowDefinition Height="*"/>
+      </Grid.RowDefinitions>
 
-    <Label Grid.Row="4" Grid.Column="1" Content="Age:"/>
-    <TextBox Grid.Row="5" Grid.Column="1"
-             Text="{Binding Age}"/>
+      <Label Content="First name:"/>
+      <TextBox Grid.Row="1" Grid.ColumnSpan="3"
+             Text="{Binding [FirstName]}"/>
 
-    <Label Grid.Row="4" Grid.Column="3" Content="Passport ID:"/>
-    <TextBox Grid.Row="5" Grid.Column="3" Grid.ColumnSpan="3"
-             Text="{Binding PassportId}"/>
+      <Label Grid.Column="4" Content="Last name:"/>
+      <TextBox Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3"
+               Text="{Binding [LastName]}"/>
 
-    <Label Grid.Row="4" Grid.Column="7" Content="Sex:"/>
-    <ComboBox Grid.Row="5" Grid.Column="7" x:Name="sexComboBox"
-             SelectedItem="{Binding Sex}"/>
+      <Label Grid.Row="3" Content="Age:"/>
+      <TextBox Grid.Row="4"
+               Text="{Binding [Age]}"/>
 
-    <Label Grid.Row="7" Grid.Column="1" Content="Address:"/>
-    <TextBox Grid.Row="8" Grid.Column="1" Grid.ColumnSpan="7"
-             Text="{Binding Address}"/>
+      <Label Grid.Row="3" Grid.Column="2" Content="Passport ID:"/>
+      <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"
+               Text="{Binding [PassportId]}"/>
 
-    <Button Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="3"
+      <Label Grid.Row="3" Grid.Column="6" Content="Sex:"/>
+      <ComboBox Grid.Row="4" Grid.Column="6" x:Name="sexComboBox"
+                SelectedItem="{Binding [Sex]}"/>
+
+      <Label Grid.Row="6" Content="Address:"/>
+      <TextBox Grid.Row="7" Grid.ColumnSpan="7"
+               Text="{Binding [Address]}"/>
+    </Grid>
+
+    <Button Grid.Row="3" Grid.Column="1" 
             Content="Save" Command="{Binding SaveCommand}"/>
-    <Button Grid.Row="10" Grid.Column="5" Grid.ColumnSpan="3"
+    <Button Grid.Row="3" Grid.Column="3"
             Content="Cancel" Command="{Binding CancelCommand}"/>
   </Grid>
+
 </Window>
