--- a/App.xaml
+++ b/App.xaml
@@ -2,7 +2,23 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="Views/CustomerListView.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+  <Application.Resources>
+    <ControlTemplate x:Key="errorTemplate">
+      <Grid>
+        <Grid.RowDefinitions>
+          <RowDefinition/>
+          <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <Border BorderThickness="1" BorderBrush="Red">
+          <AdornedElementPlaceholder/>
+        </Border>
+        <TextBlock Text="{Binding [0].ErrorContent}" 
+                   Foreground="Red" VerticalAlignment="Center" 
+                   HorizontalAlignment="Left"
+                   Margin="0 0 5 0"
+                   Grid.Row="1" TextWrapping="Wrap"/>
+      </Grid>
+    </ControlTemplate>
+  </Application.Resources>
 </Application>
