--- a/Views/AddCustomerView.xaml
+++ b/Views/AddCustomerView.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:CustomerDatabase.ViewModels"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance vm:AddCustomerViewModel}" d:DesignHeight="250" d:DesignWidth="300"
-        Title="Add new customer" Height="280" Width="600" WindowStartupLocation="CenterScreen">
+        Title="Add new customer" Height="300" Width="600" WindowStartupLocation="CenterScreen">
   
   <Grid>
     <Grid.ColumnDefinitions>
@@ -25,12 +25,11 @@
       <RowDefinition Height="10"/>
     </Grid.RowDefinitions>
     
-    <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" 
-          DataContext="{Binding Customer, Mode=TwoWay}">
+    <Grid Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3">
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="20"/>
         <ColumnDefinition Width="2*"/>
+        <ColumnDefinition Width="20"/>
+        <ColumnDefinition Width="*"/>
         <ColumnDefinition Width="20"/>
         <ColumnDefinition Width="*"/>
         <ColumnDefinition Width="20"/>
@@ -39,39 +38,64 @@
       <Grid.RowDefinitions>
         <RowDefinition Height="*"/>
         <RowDefinition Height="*"/>
-        <RowDefinition Height="10"/>
+        <RowDefinition Height="20"/>
         <RowDefinition Height="*"/>
         <RowDefinition Height="*"/>
-        <RowDefinition Height="10"/>
+        <RowDefinition Height="20"/>
         <RowDefinition Height="*"/>
         <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
 
-      <Label Content="First name:"/>
+      <Label>
+        <StackPanel Orientation="Horizontal">
+          <TextBlock Text="First name"/>
+          <TextBlock Text="*" Foreground="Red"/>
+        </StackPanel>
+      </Label>
       <TextBox Grid.Row="1" Grid.ColumnSpan="3"
-               Text="{Binding [FirstName]}"/>
+               Text="{Binding FirstName, ValidatesOnDataErrors=True, 
+        UpdateSourceTrigger=PropertyChanged}"
+               Validation.ErrorTemplate="{StaticResource errorTemplate}"/>
 
-      <Label Grid.Column="4" Content="Last name:"/>
+      <Label Grid.Column="4">
+        <StackPanel Orientation="Horizontal">
+          <TextBlock Text="Last name"/>
+          <TextBlock Text="*" Foreground="Red"/>
+        </StackPanel>
+      </Label>
       <TextBox Grid.Row="1" Grid.Column="4" Grid.ColumnSpan="3"
-               Text="{Binding [LastName]}"/>
+               Text="{Binding LastName, ValidatesOnDataErrors=True, 
+        UpdateSourceTrigger=PropertyChanged}"
+               Validation.ErrorTemplate="{StaticResource errorTemplate}"/>
 
-      <Label Grid.Row="3" Content="Age:"/>
+      <Label Grid.Row="3" Content="Age"/>
       <TextBox Grid.Row="4"
-               Text="{Binding [Age]}"/>
+               Text="{Binding Age, ValidatesOnDataErrors=True, 
+        UpdateSourceTrigger=PropertyChanged}"
+               Validation.ErrorTemplate="{StaticResource errorTemplate}"
+               PreviewTextInput="TextBox_PreviewTextInput"/>
 
-      <Label Grid.Row="3" Grid.Column="2" Content="Passport ID:"/>
+      <Label  Grid.Row="3" Grid.Column="2">
+        <StackPanel Orientation="Horizontal">
+          <TextBlock Text="Passport ID"/>
+          <TextBlock Text="*" Foreground="Red"/>
+        </StackPanel>
+      </Label>
       <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3"
-               Text="{Binding [PassportId]}"/>
+               Text="{Binding PassportId, ValidatesOnDataErrors=True, 
+        UpdateSourceTrigger=PropertyChanged}"
+               Validation.ErrorTemplate="{StaticResource errorTemplate}"
+               CharacterCasing="Upper"/>
 
-      <Label Grid.Row="3" Grid.Column="6" Content="Sex:"/>
+      <Label Grid.Row="3" Grid.Column="6" Content="Sex"/>
       <ComboBox Grid.Row="4" Grid.Column="6" x:Name="sexComboBox"
-                SelectedItem="{Binding [Sex]}"/>
+                SelectedItem="{Binding Sex}"/>
 
-      <Label Grid.Row="6" Content="Address:"/>
+      <Label Grid.Row="6" Content="Address"/>
       <TextBox Grid.Row="7" Grid.ColumnSpan="7"
-               Text="{Binding [Address]}"/>
+               Text="{Binding Address}"/>
     </Grid>
-
+    
     <Button Grid.Row="3" Grid.Column="1" 
             Content="Save" Command="{Binding SaveCommand}"/>
     <Button Grid.Row="3" Grid.Column="3"
