--- a/Views/CustomerListView.xaml
+++ b/Views/CustomerListView.xaml
@@ -6,8 +6,11 @@
         xmlns:local="clr-namespace:CustomerDatabase.Views"
         xmlns:vm="clr-namespace:CustomerDatabase.ViewModels"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance vm:CustomerListViewModel}" d:DesignHeight="250" d:DesignWidth="400"
-        Title="Customer List" Height="500" Width="800" WindowStartupLocation="CenterScreen">
+        d:DataContext="{d:DesignInstance vm:CustomerListViewModel}" 
+        d:DesignHeight="250" d:DesignWidth="400"
+        Style="{StaticResource {x:Type Window}}"
+        Title="Customer List" Height="500" Width="800" 
+        WindowStartupLocation="CenterScreen">
   <Grid>
     <Grid.RowDefinitions>
       <RowDefinition Height="10"/>
@@ -36,7 +39,13 @@
     <DataGrid Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="7"
               Margin="10" IsReadOnly="True" AutoGenerateColumns="False"
               CanUserAddRows="False" ItemsSource="{Binding Customers.DefaultView}"
-              SelectedItem="{Binding SelectedCustomer, ValidatesOnExceptions=True}">
+              SelectedItem="{Binding SelectedCustomer, ValidatesOnExceptions=True}"
+              Background="#FFDCFFE1">
+      <DataGrid.RowStyle>
+        <Style TargetType="DataGridRow">
+          <Setter Property="Background" Value="#FFDCFFE1"/>
+        </Style>
+      </DataGrid.RowStyle>
       <DataGrid.Columns>
         <DataGridTextColumn Header="First name" Binding="{Binding FirstName}" Width="5*"/>
         <DataGridTextColumn Header="Last name" Binding="{Binding LastName}" Width="5*"/>
